--- a/HelloDoc/Views/AdminDash/MdOnCall.cshtml
+++ b/HelloDoc/Views/AdminDash/MdOnCall.cshtml
@@ -10,7 +10,7 @@
                 <h3> MDs On Call</h3>
             </div>
             <div>
-                <a asp-action="AdminDash" class="btn btn-outline-info mt-3"> ❮  Back </a>
+                <a asp-action="PhysicianScheduling" class="btn btn-outline-info mt-3"> ❮  Back </a>
             </div>
         </div>
         <div class="card border-0 shadow p-4 mb-5 rounded">
