--- a/HelloDoc/Views/AdminDash/ReviewShift.cshtml
+++ b/HelloDoc/Views/AdminDash/ReviewShift.cshtml
@@ -12,7 +12,7 @@
                 <h3> Requested Shift</h3>
             </div>
             <div>
-                <a asp-action="AdminDash" class="btn btn-outline-info mt-3"> ❮  Back </a>
+                <a asp-action="PhysicianScheduling" class="btn btn-outline-info mt-3"> ❮  Back </a>
             </div>
         </div>
         <div class="card border-0 shadow p-4 mb-5 rounded">
@@ -33,9 +33,9 @@
 
 
                 <div>
-                    <button class="btn btn-success mx-2 shadow-none" id="providerBtn" style="width:fit-content">
+                  <a asp-action="PhysicianScheduling" class="btn btn-success mx-2 shadow-none" id="providerBtn" style="width:fit-content">
                         <span>View current Month Shift</span>
-                    </button>
+                    </a>
                     <button class="btn btn-success mx-2 shadow-none" id="approved" style="width:fit-content">
                         <span>Approved Selected </span>
                     </button>
