--- a/HelloDoc/Views/Shared/_AdminDash.cshtml
+++ b/HelloDoc/Views/Shared/_AdminDash.cshtml
@@ -88,7 +88,7 @@
                         <a asp-action="AdminDash" asp-controller="AdminDash" style="text-decoration:none">
                             <button class="nav-link  text-info
 
-                        @(new string[] { "AdminDash", "ViewNotes", "ViewCase","SendOrder","CreateRequest","ViewUpload" }
+                        @(new string[] { "AdminDash", "ViewNotes", "ViewCase","SendOrder","CreateRequest","ViewUpload","EncounterForm" }
                             .Contains(ViewContext.ActionDescriptor.RouteValues["action"]) ? "active" : "")">
                                 Dashboard
                             </button>
@@ -164,7 +164,7 @@
                             <a asp-action="AdminDash" asp-controller="AdminDash" style="text-decoration:none">
                                 <button class="nav-link  text-info
 
-                        @(new string[] { "AdminDash", "ViewNotes", "ViewCase","SendOrder","CreateRequest","ViewUpload" }
+                        @(new string[] { "AdminDash", "ViewNotes", "ViewCase","SendOrder","CreateRequest","ViewUpload","EncounterForm" }
                             .Contains(ViewContext.ActionDescriptor.RouteValues["action"]) ? "active" : "")">
                                     Dashboard
                                 </button>
