--- a/HelloDoc/Views/AdminDash/RecordsMenu/BlockHistory.cshtml
+++ b/HelloDoc/Views/AdminDash/RecordsMenu/BlockHistory.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_AdminDash.cshtml";
 }
 
-<div class="container-fluid bg-light" style="height:80vh!important">
+<div class="container-fluid white-bag" style="height:80vh!important">
     <h4 class="py-3">Block history</h4>
     <div class="mx-0 row px-4 border-bottom-0 white-bag border border-secondary rounded-top pt-3 pb-4 ">
         <div class="col-sm-12 col-md-12 col-lg-3 form-floating my-3">
