tables of invoice

--- a/HelloDoc/Views/AdminDash/AdminTableNew.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminTableNew.cshtml
@@ -425,7 +425,8 @@
     }
 
 
-    function togglemodalblock(btn) {
+    function togglemodalblock(btn) 
+    {
 
 
         const myModal = document.getElementById("BlockCaseModal");
@@ -436,9 +437,7 @@
         document.getElementById('blockid').value = requestid;
         const name = btn.getAttribute('data-blockname');
         document.getElementById('blocktext').textContent = name;
-
-
-    }
+ }
 
 
 </script>
