--- a/HelloDoc/Views/AdminDash/_ProviderTable.cshtml
+++ b/HelloDoc/Views/AdminDash/_ProviderTable.cshtml
@@ -115,6 +115,7 @@
         const myModal = document.getElementById("ContactProviderModal");
         var bsModal = new bootstrap.Modal(myModal);
         bsModal.show();
+       
 
         const physicianid = btn.getAttribute('data-physicianid');
         document.getElementById('physicianid').value = physicianid;
@@ -136,4 +137,5 @@
                console.log("error to check");
            }
         });
-    }</script>
+    }
+ </script>
