--- a/HelloDoc/Views/Shared/_AdminDash.cshtml
+++ b/HelloDoc/Views/Shared/_AdminDash.cshtml
@@ -113,7 +113,7 @@
                         <ul class="dropdown-menu ">
                             <li><a asp-action="Provider" asp-controller="AdminDash" class="dropdown-item ">Provider</a></li>
                             <li><a asp-action="PhysicianScheduling" class="dropdown-item">Scheduling</a></li>
-                            <li><a class="dropdown-item">Invoice</a></li>
+                            <li><a asp-action="AdminInvoice" class="dropdown-item">Invoice</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -189,7 +189,7 @@
                             <ul class="dropdown-menu ">
                                 <li><a asp-action="Provider" asp-controller="AdminDash" class="dropdown-item ">Provider</a></li>
                                 <li><a asp-action="PhysicianScheduling" class="dropdown-item">Scheduling</a></li>
-                                <li><a class="dropdown-item">Invoice</a></li>
+                                <li><a asp-action="AdminInvoice" class="dropdown-item">Invoice</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
