--- a/HelloDoc/Views/ProviderDashBoard/DashBoard/ProviderInvoice.cshtml
+++ b/HelloDoc/Views/ProviderDashBoard/DashBoard/ProviderInvoice.cshtml
@@ -1,21 +1,20 @@
 ﻿@{
-    Layout = "~/Views/Shared/_AdminDash.cshtml";
+    Layout = "~/Views/Shared/_ProviderDashBoard.cshtml";
 }
 
 
 <div class="bg-body-secondary">
     <div class="container d-flex justify-content-between text-center align-items-center my-3 bg-body-secondary">
-        <h3 class="text-body fw-semibold">Timesheet</h3>
+        <h3 class="text-body fw-semibold" id="text">Timesheet</h3>
         <a asp-action="ProviderDashBoard" class="btn btn-outline-info"> ❮  Back </a>
     </div>
 
 
-    <div class="container my-3 white-bag shadow p-3">
+    <div class="container my-3 white-bag shadow p-3" id="TopDiv">
         <div class="d-flex justify-content-between">
 
 
-
-            <select class="form-select py-3  w-25 " aria-label="Default select example">
+            <select class="form-select py-3 w-25" id="selectedDate" aria-label="Default select example">
                 <option value="0">Search By Timesheetperiod</option>
                 @{
                     int month = 1;
@@ -39,10 +38,46 @@
                 }
             </select>
 
-            <button class="btn btn-outline-info">Finalize Timesheet </button>
+
+            <button class="btn btn-outline-info" onclick="openTimesheet()">Finalize Timesheet</button>
+          
  
         </div>
     </div>
+            <div class="container  w-75" id="timssheet">
+            </div>
 </div>
+<script>
+
+   
+
+    function openTimesheet() {
+    
+        var date = $("#selectedDate").val();
+
+        if (date != "0") {
+            $.ajax({
+                type: 'GET',
+                url: '/ProviderDashBoard/OpenSheet',
+                data: { date: date },
+                success: function (response) {
+                    console.log(response)
+                    $("#timssheet").html(response);
+                    $("#TopDiv").hide();
+                    $("#text").css('visibility','hidden');  
+
+                },
+                error: function (data) {
+                    alert(data.d);
+                }
+            });
+        } else {
+            alert("please select the date");
+        }
+    }
+</script>
+
+
+
 
 
