--- a/HelloDoc/Views/ProviderDashBoard/DashBoard/ProviderInvoice.cshtml
+++ b/HelloDoc/Views/ProviderDashBoard/DashBoard/ProviderInvoice.cshtml
@@ -38,9 +38,6 @@
                     }
                 }
             </select>
-
-
-
             <button class="btn btn-outline-info" id="btn" onclick="openTimesheet()">Finalize Timesheet</button>
           
  
@@ -50,7 +47,14 @@
             </div>
             
             <div class="container px-0 w-75" id="timssheetdata">
+
+
             </div>
+
+    <div class="container px-0 w-75" id="addReciept">
+    </div>
+
+
 </div>
 <script>
 
@@ -102,8 +106,6 @@
             });
         }
     }
-
-
 </script>
 
 
