--- a/HelloDoc/Views/Shared/_ProviderDashBoard.cshtml
+++ b/HelloDoc/Views/Shared/_ProviderDashBoard.cshtml
@@ -159,7 +159,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer   bg-dark text-white pe-3 footer position-sticky  w-100 align-middle bottom-0" style="height: 6vh !important;">
+    <footer class="border-top footer   bg-dark text-white pe-3 footer position-sticky  w-100 align-middle bottom-0 z-3" style="height: 6vh !important;">
         <div class="d-flex flex-row justify-content-end align-items-center my-auto h-100 py-auto bottom-0 w-100">
             <span>Terms Of Condition | Privacy Policy</span>
         </div>
