--- a/HelloDoc/Views/ProviderDashBoard/DashBoard/_AddReceipts.cshtml
+++ b/HelloDoc/Views/ProviderDashBoard/DashBoard/_AddReceipts.cshtml
@@ -4,6 +4,7 @@
     int month = ViewBag.startDate.Month;
     int endDate = ViewBag.endDate.Day;
     int year = ViewBag.startDate.Year;
+    int PhysicianId = ViewBag.PhysicianId;
     var Listmodel = Model;
     int j = 0;
 }
@@ -24,25 +25,41 @@
         }
         @for (int i = startDate; i <= endDate; i++)
         {
+
             string date = new DateTime(year, month, i).Date.ToString("dd/MM/yyyy");
+            int day = new DateTime(year, month, i).Date.Day;
                 <form  id="@j" class="formSubmit" enctype="multipart/form-data">
-                @if (Listmodel.Count > 0 && count < Listmodel.Count && Listmodel[count].TimesheetDetailId == i)
-            {
-                <tr>
-                <td class="d-none"><input id="tdId_@j" value="@Listmodel[count].TimesheetDetailId" hidden /></td>
-                    <td class="align-middle">@date</td>
-                    <td class="align-middle" id="Item_@j">@Listmodel[count].ItemName</td>
-                    <td class="align-middle" id="Amount_@j">@Listmodel[count].Amount</td>
-                    <td class="align-middle" id="file_@j">@Listmodel[count].Bill</td>
-                    <td class="align-middle text-center d-flex justify-content-between" id="buttonset">
-                        <button class="btn btn-outline-info" onclick="EditData(@j)">Edit</button>
-                        <button class="btn btn-outline-info">Delete</button>
-                        <button class="btn btn-outline-info">View</button></td>
-                        <td class="align-middle text-center d-flex d-none justify-content-between" id="submitset">
-                      <button type="button" onclick="formSubmit(@j)"  class="btn btn-outline-info">submit</button>
-                        <button class="btn btn-outline-info">cancel</button></td>
-                        
-                </tr>
+                @if (Listmodel.Count > 0 && count < Listmodel.Count && Listmodel[count].TimesheetDetailId == i )
+              {
+                   @if(Listmodel[count].IsDeleted == false)
+                    {
+                    <tr>
+                        <td class="d-none"><input id="tdId_@j" value="@Listmodel[count].TimesheetDetailId" hidden /></td>
+                        <td class="align-middle">@date</td>
+                        <td class="d-none"><input id="TdDate_@j" name="Date" value="@date" hidden /></td>
+                        <td class="align-middle" id="Item_@j">@Listmodel[count].ItemName</td>
+                        <td class="align-middle" id="Amount_@j">@Listmodel[count].Amount</td>
+                        <td class="align-middle" id="file_@j">@Listmodel[count].Bill</td>
+                        <td class="align-middle text-center d-flex justify-content-between" id="buttonset_@j">
+                            <button class="btn btn-outline-info" onclick="EditData(@j)">Edit</button>
+                            <button class="btn btn-outline-info" onclick="DeleteData(@j)">Delete</button>
+
+                           
+                                
+                            
+                           
+                            <a class="btn btn-outline-info" target="_blank" href='~/Receipts/@PhysicianId/@day@Listmodel[count].Bill'>View</a>
+                        </td>
+
+
+                        <td class="align-middle text-center d-flex d-none justify-content-between" id="submitset_@j">
+                            <button type="button" onclick="submitEditForm(@j)" class="btn btn-outline-info">submit</button>
+
+                        </td>
+
+                     </tr>
+                    }
+                   
                 count++;
             }
             else
@@ -94,57 +111,10 @@
 </table>
 
 
-@* <div class="">
-    <form asp-action="SubmitReceipt" asp-controller="ProviderDashBoard" id="form" method="post" class="myform addReimbursement" enctype="multipart/form-data">
-        <input type="hidden" id="ItemInput" class="pay-item-hidden Item" name="Item" />
-        <input type="hidden" id="AmountInput" class="pay-amount-hidden Amount" name="Amount" />
-        <input type="hidden" name="PhysicianId" value="@ViewBag.PhysicianId" />
-        <input type="hidden" id="dateInput" name="Date" />
-        <input type="hidden" id="timesheetdetailIdInput" name="Timesheetdetailid" />
-        <div class="form-floating">
-            <div class="col-md-12 form-floating d-flex file-parent">
-                <div class="file-upload-timesheet border border-1" data-text="Select file">
-                    <input name="file" type="file" class="file-upload-field" style="display:block;" id="fileInput">
-                    <button type="submit"  id="btnn"></button>
-                </div>
-                
-            </div>
-        </div>
-    </form>
-</div> *@
 
 
-<script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
-     function EditData(j) {
-        // Get references to the elements
-        var itemTd = document.getElementById("Item_" + j);
-        var amountTd = document.getElementById("Amount_" + j);
-        var fileTd = document.getElementById("file_" + j);
-
-        // Clear the contents of the TDs
-        itemTd.innerHTML = '';
-        amountTd.innerHTML = '';
-        fileTd.innerHTML = '';
-
-        // Append inputs and HTML elements to the TDs
-        itemTd.innerHTML = '<input type="text" id="Item_' + j + '" name="Item" class="form-control" />';
-        amountTd.innerHTML = '<input type="number" min="0" id="Amount_' + j + '" name="Amount" class="form-control" />';
-        fileTd.innerHTML = '<div class="input-group input-group-lg d-flex">' +
-            '<label id="infoarea" for="file_' + j + '" class="form-control fs-6 bg-body-secondary align-middle py-1 d-flex align-items-center file-upload">' +
-            'Select File' +
-            '</label>' +
-            '<input type="file" class="form-control" name="file" id="file_' + j + '" hidden />' +
-            '<button class="input-group-text btn btn-info text-light" id="filesubmitbtn" type="button">' +
-            '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-cloud-arrow-up" viewBox="0 0 16 16">' +
-            '<path fill-rule="evenodd" d="M7.646 5.146a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1-.708.708L8.5 6.707V10.5a.5.5 0 0 1-1 0V6.707L6.354 7.854a.5.5 0 1 1-.708-.708z" />' +
-            '<path d="M4.406 3.342A5.53 5.53 0 0 1 8 2c2.69 0 4.923 2 5.166 4.579C14.758 6.804 16 8.137 16 9.773 16 11.569 14.502 13 12.687 13H3.781C1.708 13 0 11.366 0 9.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383m.653.757c-.757.653-1.153 1.44-1.153 2.056v.448l-.445.049C2.064 6.805 1 7.952 1 9.318 1 10.785 2.23 12 3.781 12h8.906C13.98 12 15 10.988 15 9.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 4.825 10.328 3 8 3a4.53 4.53 0 0 0-2.941 1.1z" />' +
-            '</svg>' +
-            '<span class="d-none d-md-inline">Upload</span>' +
-            '</button>' +
-            '</div>';
-    }
-</script>
     <script>
     function formSubmit(i) {
         debugger
@@ -176,4 +146,101 @@
             }
         });
     }
+
+    function submitEditForm(i) {
+        debugger
+        var form = document.getElementById(i);
+        var formData = new FormData(form);
+        var dateofstart = $("#selectedDate").val();
+        var fileUpload = $('#File_' + i).prop('files')[0];
+        var item = $('#item_' + i).val();
+        var amount = $('#amount_' + i).val();
+        var tdId = $('#tdId_' + i).val();
+        var date = $('#TdDate_' + i).val();
+        formData.append('file', fileUpload);
+        formData.append('Item', item);
+        formData.append('Date', date);
+        formData.append('Amount', amount);
+        formData.append('dos', dateofstart);
+        formData.append('tdId', tdId);
+
+        $.ajax({
+            url: '/ProviderDashBoard/SubmitEditReceipt',
+            type: 'POST',
+            data: formData,
+            processData: false,
+            contentType: false,
+            success: function (response) {
+                $("#addReciept").html(response);
+
+            },
+            error: function (xhr, status, error) {
+                console.error('Error submitting form:', error);
+            }
+        });
+    }
+
+    function EditData(j) {
+        // Get references to the elements
+        var itemTd = document.getElementById("Item_" + j);
+        var amountTd = document.getElementById("Amount_" + j);
+        var fileTd = document.getElementById("file_" + j);
+
+        document.getElementById("buttonset_" + j).style.setProperty('display', 'none', 'important');
+        document.getElementById("submitset_" + j).style.setProperty('display', 'flex', 'important');
+
+        
+
+        // Clear the contents of the TDs
+        itemTd.innerHTML = '';
+        amountTd.innerHTML = '';
+        fileTd.innerHTML = '';
+
+        // Append inputs and HTML elements to the TDs
+        itemTd.innerHTML = '<input type="text" id="item_' + j + '" name="item" class="form-control" />';
+        amountTd.innerHTML = '<input type="number" min="0" id="amount_' + j + '" name="amount" class="form-control" />';
+        fileTd.innerHTML = '<div class="input-group input-group-lg d-flex">' +
+            '<label id="infoarea" for="File_' + j + '" class="form-control fs-6 bg-body-secondary align-middle py-1 d-flex align-items-center file-upload">' +
+            'Select File' +
+            '</label>' +
+            '<input type="file" class="form-control" name="file" id="File_' + j + '" hidden />' +
+            '<button class="input-group-text btn btn-info text-light" id="filesubmitbtn" type="button">' +
+            '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-cloud-arrow-up" viewBox="0 0 16 16">' +
+            '<path fill-rule="evenodd" d="M7.646 5.146a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1-.708.708L8.5 6.707V10.5a.5.5 0 0 1-1 0V6.707L6.354 7.854a.5.5 0 1 1-.708-.708z" />' +
+            '<path d="M4.406 3.342A5.53 5.53 0 0 1 8 2c2.69 0 4.923 2 5.166 4.579C14.758 6.804 16 8.137 16 9.773 16 11.569 14.502 13 12.687 13H3.781C1.708 13 0 11.366 0 9.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383m.653.757c-.757.653-1.153 1.44-1.153 2.056v.448l-.445.049C2.064 6.805 1 7.952 1 9.318 1 10.785 2.23 12 3.781 12h8.906C13.98 12 15 10.988 15 9.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 4.825 10.328 3 8 3a4.53 4.53 0 0 0-2.941 1.1z" />' +
+            '</svg>' +
+            '<span class="d-none d-md-inline">Upload</span>' +
+            '</button>' +
+            '</div>';
+    }
+
+    function DeleteData(i) 
+    {
+        debugger
+        var form = document.getElementById(i);
+        var formData = new FormData(form);
+        var tdId = $('#tdId_' + i).val();
+        var dateofstart = $("#selectedDate").val();
+        formData.append('tdId', tdId);
+        formData.append('dos', dateofstart);
+
+        $.ajax({
+            url: '/ProviderDashBoard/DeleteReceipt',
+            type: 'POST',
+            data: formData,
+            processData: false,
+            contentType: false,
+            success: function (response) {
+                $("#addReciept").html(response);
+
+            },
+            error: function (xhr, status, error) {
+                console.error('Error submitting form:', error);
+            }
+        });
+    }
+
+       
+
+
 </script>
